Revert "Bug 1676925 - Remove code supporting the defunct WebRender experiments. r=jrmuizel,marionette-reviewers"
This reverts commit 78e9c18700d8456bcf6fc0909607edd26b6dfa39.

--- a/taskcluster/ci/test/test-sets.yml
+++ b/taskcluster/ci/test/test-sets.yml
@@ -187,6 +187,9 @@ ccov-code-coverage-tests:
     - test-coverage
     - test-coverage-wpt
 
+marionette-gpu-tests:
+    - marionette-gpu
+
 mochitest-headless:
     - mochitest-plain-headless
 
