--- a/taskcluster/ci/test/marionette.yml
+++ b/taskcluster/ci/test/marionette.yml
@@ -67,3 +67,12 @@ marionette-headless:
     mozharness:
         extra-options:
             - --headless
+
+marionette-gpu:
+    description: "Marionette with GPU unittest run"
+    treeherder-symbol: MnG
+    max-run-time: 1800
+    instance-size: default
+    mozharness:
+        extra-options:
+            - --test-manifest gpu-unit-tests.ini
